# gospel

./: .gitignore  .stylelintrc.json  AGENTS.md  CHANGELOG.md  CONTEXT.md  DESIGN.md  PRODUCT.md  biome.json  gospel.pen  index.html  package-lock.json  package.json  review.md  skills-lock.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.gospel/: PLAN.md
plans/: 001-fix-frontend-vitest-harness.md  002-add-lint-format-typecheck.md  003-fix-loop-detector-false-positive.md  004-close-shell-flag-path-escape.md  005-route-skill-scripts-through-approval.md  006-close-whitespace-shell-path-bypass.md  007-harden-skill-script-directory-sandbox.md  008-harden-corpus-symlink-boundaries.md  009-fix-local-session-streaming-fallback.md  README.md  (+12 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.gospel/: review_failures.jsonl
src-tauri/examples/: test_corpus.rs
src-tauri/src/: app_config.rs  approval_broker.rs  context_search.rs  conversation.rs  harness_plan.rs  harness_profile.rs  json_utils.rs  keychain.rs  lib.rs  llm.rs  main.rs  mcp.rs  model_fetch.rs  models.rs  provider_client.rs  session_mode.rs  session_store.rs  session_turn.rs  shell_tools.rs  skills.rs  subprocess_output.rs  text_utils.rs  trace.rs  turn.rs  verification.rs  workspace_tools.rs
src-tauri/src/corpus/: commands.rs  dto.rs  extractor.rs  mod.rs  persistence.rs  symlink_guard.rs  tools.rs
src-tauri/src/review/: analytics.rs  anti_pattern.rs  config.rs  detector.rs  knowledge.rs  mod.rs  multi.rs  outcome.rs  progress.rs  signal.rs  tools.rs  validator.rs
src-tauri/src/skills/: stopwords.json
src-tauri/tests/: keychain_test.rs
(+119 files in other folders)
