[package]
name = "gospel"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "gospel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gospel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rig = { version = "0.39", package = "rig-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process"] }
dirs = "6"
keyring = "3"
thiserror = "2"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
tracing = "0.1"
once_cell = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-dialog = "2"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
globset = "0.4"
regex = "1"
sha2 = "0.11.0"

[dev-dependencies]
keyring = "3"
rig = { version = "0.39", package = "rig-core", features = ["test-utils"] }
